syntax = "proto3";

package crawler;

option go_package = "animetop/proto/pb";

// ============================================================================
// IP 流动性分析器 - 爬虫消息定义
// ============================================================================

// 商品状态枚举
enum ItemStatus {
  ITEM_STATUS_ON_SALE = 0;  // 在售
  ITEM_STATUS_SOLD = 1;     // 已售 (通过 thumbnail-sticker 判断)
}

// 爬虫请求
// 每个 IP 生成一个请求，分别抓取在售和已售商品
message CrawlRequest {
  uint64 ip_id = 1;              // IP 数据库 ID (关联 ip_metadata.id)
  string keyword = 2;            // 搜索关键词
  // 字段 3 保留 (历史原因)
  string task_id = 4;            // 任务追踪 ID (UUID)
  int64 created_at = 5;          // 任务创建时间 (Unix 时间戳秒)

  // 字段 6-8 保留 (v1 锚点模式已移除)
  reserved 6, 7, 8;
  reserved "is_first_crawl", "anchor_window", "max_pages";

  // 重试相关
  int32 retry_count = 9;         // 已重试次数 (Janitor rescue 时递增)

  // 固定页数模式 (分别抓取在售和已售)
  int32 pages_on_sale = 10;      // 在售页数 (默认 5)
  int32 pages_sold = 11;         // 已售页数 (默认 5)
}

// 商品信息
message Item {
  string source_id = 1;     // 商品源 ID (如 m123456789 或 shops_xxx)
  string title = 2;         // 商品标题
  int32 price = 3;          // 价格 (日元)
  string image_url = 4;     // 商品图片 URL
  string item_url = 5;      // 商品详情页 URL
  ItemStatus status = 6;    // 商品状态 (通过 HTML thumbnail-sticker 判断)
}

// 爬虫响应
message CrawlResponse {
  uint64 ip_id = 1;              // IP 数据库 ID
  // 字段 2 保留 (历史原因)
  repeated Item items = 3;       // 抓取到的商品列表 (从新到旧，在售+已售混合)
  int32 total_found = 4;         // 页面上显示的总数 (如有)
  string error_message = 5;      // 错误消息 (成功时为空)
  string task_id = 6;            // 任务追踪 ID
  int64 crawled_at = 7;          // 抓取完成时间 (Unix 时间戳秒)

  // 字段 8-9 保留 (v1 锚点模式已移除)
  reserved 8, 9;
  reserved "is_first_crawl", "stopped_at_anchor";

  int32 pages_crawled = 10;      // 实际翻页数

  // 重试相关
  int32 retry_count = 11;        // 已重试次数 (继承自 CrawlRequest)
}
